correção de limpar a tela